--- a/package/Config.in
+++ b/package/Config.in
@@ -178,6 +178,7 @@ source "package/dbus-python/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/devmem2/Config.in"
 endif
+source "package/dingoo-tvout/Config.in"
 source "package/dmidecode/Config.in"
 source "package/dmraid/Config.in"
 source "package/dosfstools/Config.in"
