gmenu2x: Added package.
Application menu for devices with a 320x240 screen and buttons.

--- a/package/Config.in
+++ b/package/Config.in
@@ -475,6 +475,7 @@ endmenu
 
 menu "Miscellaneous"
 source "package/empty/Config.in"
+source "package/gmenu2x/Config.in"
 source "package/shared-mime-info/Config.in"
 endmenu
 
