sdl_mixer: Added package "timidity-instruments" for Timidity instrument data
Allows MIDI music to be played by SDL_mixer. This is required by some ports
of old PC games, such as Doom 2 and Duke Nukem 3D.

This commit is based on changes made by booboo for the original Dingux rootfs.
The buildroot makefiles have been rewritten in modern style.

--- a/package/Config.in
+++ b/package/Config.in
@@ -131,6 +131,7 @@ source "package/sdl_sound/Config.in"
 source "package/sdl_net/Config.in"
 source "package/sdl_ttf/Config.in"
 source "package/sdl_gfx/Config.in"
+source "package/timidity-instruments/Config.in"
 
 comment "other GUIs"
 source "package/efl/Config.in"
