libmikmod: Added package.
A replayer for MOD and other tracker formats.

The SDL_mixer makefile was adapted to use libmikmod if enabled.

The changes in this commit were taken from booboo's Dingux buildroot.

--- a/package/Config.in
+++ b/package/Config.in
@@ -117,6 +117,7 @@ endif
 source "package/fbterm/Config.in"
 source "package/fbv/Config.in"
 source "package/imagemagick/Config.in"
+source "package/libmikmod/Config.in"
 source "package/linux-fusion/Config.in"
 source "package/lite/Config.in"
 source "package/sawman/Config.in"
