--- a/package/Config.in
+++ b/package/Config.in
@@ -114,6 +114,7 @@ source "package/fbset/Config.in"
 endif
 source "package/fbv/Config.in"
 source "package/imagemagick/Config.in"
+source "package/libmikmod/Config.in"
 source "package/linux-fusion/Config.in"
 source "package/lite/Config.in"
 source "package/sawman/Config.in"
