alsa-volume: added package.
This package contains a tool to retrieve the volume of a given control of the ALSA mixer.

--- a/package/multimedia/Config.in
+++ b/package/multimedia/Config.in
@@ -1,5 +1,6 @@
 menu "Audio and video applications"
 source "package/multimedia/alsa-utils/Config.in"
+source "package/multimedia/alsa-volume/Config.in"
 source "package/multimedia/aumix/Config.in"
 source "package/multimedia/bellagio/Config.in"
 source "package/multimedia/faad2/Config.in"
