libzip: added package.

--- a/package/Config.in
+++ b/package/Config.in
@@ -310,6 +310,7 @@ menu "Compression and decompression"
 source "package/libarchive/Config.in"
 source "package/lzo/Config.in"
 source "package/zlib/Config.in"
+source "package/libzip/Config.in"
 endmenu
 
 menu "Crypto"
