opendingux: A320 defconfig: Switch to uClibc 0.9.33.2

--- a/configs/a320_defconfig
+++ b/configs/a320_defconfig
@@ -5,7 +5,6 @@ BR2_SOURCEFORGE_MIRROR="switch"
 BR2_OPTIMIZE_2=y
 BR2_KERNEL_HEADERS_VERSION=y
 BR2_DEFAULT_KERNEL_VERSION="3.4.1"
-BR2_UCLIBC_VERSION_0_9_31=y
 BR2_UCLIBC_CONFIG="board/opendingux/a320/uclibc.config"
 BR2_BINUTILS_VERSION_2_20_1=y
 BR2_GCC_VERSION_4_7_X=y
@@ -15,6 +14,7 @@ BR2_PACKAGE_GDB_HOST=y
 BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
 BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_PTHREADS_OLD=y
 BR2_TARGET_GENERIC_HOSTNAME="opendingux"
 BR2_TARGET_GENERIC_ISSUE="Welcome to OpenDingux"
 BR2_ROOTFS_STATIC_DEVICE_TABLE="board/opendingux/mini_device_table.txt"
