opendingux: A320 defconfig: Enable LTO
This includes an upgrade to binutils 2.22.

On the opendingux-2010.11 branch, we couldn't find a combination of GCC,
uClibc and binutils that worked and supported LTO, but it seems the latest
versions we have now work fine.

--- a/configs/a320_defconfig
+++ b/configs/a320_defconfig
@@ -6,8 +6,10 @@ BR2_OPTIMIZE_2=y
 BR2_KERNEL_HEADERS_VERSION=y
 BR2_DEFAULT_KERNEL_VERSION="3.4.1"
 BR2_UCLIBC_CONFIG="board/opendingux/a320/uclibc.config"
-BR2_BINUTILS_VERSION_2_20_1=y
+BR2_BINUTILS_VERSION_2_22=y
+BR2_BINUTILS_EXTRA_CONFIG_OPTIONS="--enable-lto"
 BR2_GCC_VERSION_4_7_X=y
+BR2_EXTRA_GCC_CONFIG_OPTIONS="--enable-lto"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_HOST=y
