opendingux: Enable firmware loading feature in busybox mdev

--- a/board/opendingux/busybox-1.20.x.config
+++ b/board/opendingux/busybox-1.20.x.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.20.1
-# Tue Jul  3 15:31:12 2012
+# Fri Aug 24 00:11:01 2012
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -531,7 +531,7 @@ CONFIG_FEATURE_MDEV_CONF=y
 CONFIG_FEATURE_MDEV_RENAME=y
 CONFIG_FEATURE_MDEV_RENAME_REGEXP=y
 CONFIG_FEATURE_MDEV_EXEC=y
-# CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
+CONFIG_FEATURE_MDEV_LOAD_FIRMWARE=y
 # CONFIG_REV is not set
 # CONFIG_ACPID is not set
 # CONFIG_FEATURE_ACPID_COMPAT is not set
