opendingux: GCW0: Include RTL8192CU firmware

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -49,6 +49,8 @@ BR2_PACKAGE_TIMIDITY_INSTRUMENTS=y
 BR2_PACKAGE_DINGOO_TVOUT=y
 BR2_PACKAGE_FMTOOLS=y
 BR2_PACKAGE_I2C_TOOLS=y
+BR2_PACKAGE_LINUX_FIRMWARE=y
+BR2_PACKAGE_LINUX_FIRMWARE_REALTEK_RTL8192CU=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_PWSWD=y
 BR2_PACKAGE_PYTHON_CURSES=y
