--- a/board/opendingux/gcw0/target_skeleton/etc/mdev.conf
+++ b/board/opendingux/gcw0/target_skeleton/etc/mdev.conf
@@ -1,2 +1,1 @@
-mmc.*	 0:6	0660	*/usr/sbin/mnt $MDEV noatime,nodiratime,utf8=1
-ccnand.* 0:6	0660	*/usr/sbin/mnt $MDEV noatime,nodiratime,utf8=1
+mmc.*	 0:6	0660	*/usr/sbin/mnt $MDEV noatime,nodiratime
