opendingux: GCW0: defconfig update
Disable TV-out tool (Dingoo A320 specific) and MTD utils (Zero has no
NAND) and enable softfloat (hard float is binary incompatible).

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -13,7 +13,6 @@ BR2_EXTRA_GCC_CONFIG_OPTIONS="--enable-lto"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_HOST=y
-# BR2_SOFT_FLOAT is not set
 BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
 BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
@@ -46,12 +45,10 @@ BR2_PACKAGE_SDL_SOUND=y
 BR2_PACKAGE_SDL_NET=y
 BR2_PACKAGE_SDL_GFX=y
 BR2_PACKAGE_TIMIDITY_INSTRUMENTS=y
-BR2_PACKAGE_DINGOO_TVOUT=y
 BR2_PACKAGE_FMTOOLS=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_REALTEK_RTL8192CU=y
-BR2_PACKAGE_MTD=y
 BR2_PACKAGE_PWSWD=y
 BR2_PACKAGE_PYTHON_CURSES=y
 BR2_PACKAGE_PYTHON_PYEXPAT=y
@@ -107,6 +104,7 @@ BR2_PACKAGE_NTP_NTPDC=y
 BR2_PACKAGE_NTP_NTPQ=y
 BR2_PACKAGE_NTP_TICKADJ=y
 BR2_PACKAGE_OPENSSH=y
+# BR2_PACKAGE_OPENSSH_START_DAEMON is not set
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_USHARE=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
