--- a/package/Config.in
+++ b/package/Config.in
@@ -557,6 +557,7 @@ source "package/empty/Config.in"
 source "package/gmenu2x/Config.in"
 source "package/googlefontdirectory/Config.in"
 source "package/mobile-broadband-provider-info/Config.in"
+source "package/pyclock/Config.in"
 source "package/shared-mime-info/Config.in"
 source "package/sound-theme-borealis/Config.in"
 source "package/sound-theme-freedesktop/Config.in"
