--- a/board/opendingux/gcw0/uclibc.config
+++ b/board/opendingux/gcw0/uclibc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Version: 0.9.33.2
-# Thu Aug 23 17:05:46 2012
+# Fri Oct  5 03:28:42 2012
 #
 # TARGET_alpha is not set
 # TARGET_arm is not set
@@ -85,10 +85,11 @@ LDSO_LD_LIBRARY_PATH=y
 UCLIBC_CTOR_DTOR=y
 # LDSO_GNU_HASH_SUPPORT is not set
 # HAS_NO_THREADS is not set
-LINUXTHREADS_OLD=y
+# LINUXTHREADS_OLD is not set
 # LINUXTHREADS_NEW is not set
-# UCLIBC_HAS_THREADS_NATIVE is not set
+UCLIBC_HAS_THREADS_NATIVE=y
 UCLIBC_HAS_THREADS=y
+UCLIBC_HAS_TLS=y
 PTHREADS_DEBUG_SUPPORT=y
 UCLIBC_HAS_SYSLOG=y
 UCLIBC_HAS_LFS=y
@@ -104,7 +105,8 @@ UCLIBC_SUSV4_LEGACY=y
 # UCLIBC_STRICT_HEADERS is not set
 # UCLIBC_HAS_STUBS is not set
 # UCLIBC_HAS_SHADOW is not set
-# UCLIBC_HAS_PROGRAM_INVOCATION_NAME is not set
+UCLIBC_HAS_PROGRAM_INVOCATION_NAME=y
+# UCLIBC_HAS___PROGNAME is not set
 UCLIBC_HAS_PTY=y
 ASSUME_DEVPTS=y
 UNIX98PTY_ONLY=y
@@ -199,6 +201,7 @@ UCLIBC_HAS_ERRNO_MESSAGES=y
 UCLIBC_HAS_SIGNUM_MESSAGES=y
 # UCLIBC_HAS_SYS_SIGLIST is not set
 UCLIBC_HAS_GNU_GETOPT=y
+UCLIBC_HAS_STDIO_FUTEXES=y
 # UCLIBC_HAS_GNU_GETSUBOPT is not set
 
 #
@@ -240,7 +243,6 @@ UCLIBC_BUILD_NOEXECSTACK=y
 CROSS_COMPILER_PREFIX="/home/mth/gcw0/buildroot/output/host/usr/bin/mipsel-unknown-linux-uclibc-"
 UCLIBC_EXTRA_CFLAGS=""
 # DODEBUG is not set
-# DODEBUG_PT is not set
 DOSTRIP=y
 # DOASSERTS is not set
 # SUPPORT_LD_DEBUG is not set
