--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -41,6 +41,20 @@ BR2_PACKAGE_SDL_SOUND=y
 BR2_PACKAGE_SDL_NET=y
 BR2_PACKAGE_SDL_GFX=y
 BR2_PACKAGE_TIMIDITY_INSTRUMENTS=y
+BR2_PACKAGE_E2FSPROGS=y
+# BR2_PACKAGE_E2FSPROGS_BADBLOCKS is not set
+# BR2_PACKAGE_E2FSPROGS_CHATTR is not set
+# BR2_PACKAGE_E2FSPROGS_DUMPE2FS is not set
+# BR2_PACKAGE_E2FSPROGS_E2FREEFRAG is not set
+# BR2_PACKAGE_E2FSPROGS_E2UNDO is not set
+# BR2_PACKAGE_E2FSPROGS_FILEFRAG is not set
+# BR2_PACKAGE_E2FSPROGS_FINDFS is not set
+# BR2_PACKAGE_E2FSPROGS_FSCK is not set
+# BR2_PACKAGE_E2FSPROGS_LOGSAVE is not set
+# BR2_PACKAGE_E2FSPROGS_LSATTR is not set
+# BR2_PACKAGE_E2FSPROGS_MKLOSTFOUND is not set
+BR2_PACKAGE_E2FSPROGS_RESIZE2FS=y
+# BR2_PACKAGE_E2FSPROGS_UUIDGEN is not set
 BR2_PACKAGE_FMTOOLS=y
 BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
@@ -79,6 +93,7 @@ BR2_PACKAGE_LIBTHEORA=y
 BR2_PACKAGE_NEWT=y
 BR2_PACKAGE_POPT=y
 BR2_PACKAGE_GMENU2X=y
+BR2_PACKAGE_PYCLOCK=y
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 BR2_PACKAGE_DHCPDUMP=y
@@ -114,6 +129,7 @@ BR2_PACKAGE_FILE=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_BWM_NG=y
 BR2_PACKAGE_HTOP=y
+BR2_PACKAGE_UTIL_LINUX_PARTX=y
 BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 # BR2_TARGET_ROOTFS_TAR is not set
