--- a/package/Config.in
+++ b/package/Config.in
@@ -722,6 +722,7 @@ source "package/bootutils/Config.in"
 endif
 source "package/bwm-ng/Config.in"
 source "package/cpuload/Config.in"
+source "package/dingux-commander/Config.in"
 source "package/htop/Config.in"
 source "package/kmod/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
