--- a/package/Config.in
+++ b/package/Config.in
@@ -339,6 +339,7 @@ source "package/libconfig/Config.in"
 source "package/libconfuse/Config.in"
 source "package/libfuse/Config.in"
 source "package/liblockfile/Config.in"
+source "package/libopk/Config.in"
 source "package/libsysfs/Config.in"
 source "package/fusezip/Config.in"
 endmenu
