opendingux: GCW0: Update defconfig
Set vendor to "gcw0".
Switch to hardware float.
Enable libopk and DinguxCommander.

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -2,6 +2,7 @@ BR2_mipsel=y
 BR2_mips_jz4770=y
 BR2_DL_DIR="$(BASE_DIR)/downloads"
 BR2_OPTIMIZE_2=y
+BR2_VENDOR="gcw0"
 BR2_UCLIBC_CONFIG="board/opendingux/gcw0/uclibc.config"
 BR2_BINUTILS_VERSION_2_22=y
 BR2_BINUTILS_EXTRA_CONFIG_OPTIONS="--enable-lto"
@@ -10,6 +11,7 @@ BR2_EXTRA_GCC_CONFIG_OPTIONS="--enable-lto"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
 BR2_PACKAGE_GDB_HOST=y
+# BR2_SOFT_FLOAT is not set
 BR2_TOOLCHAIN_BUILDROOT_LARGEFILE=y
 BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
@@ -39,7 +41,6 @@ BR2_PACKAGE_SDL_IMAGE_GIF=y
 BR2_PACKAGE_SDL_IMAGE_TARGA=y
 BR2_PACKAGE_SDL_SOUND=y
 BR2_PACKAGE_SDL_NET=y
-BR2_PACKAGE_SDL_GFX=y
 BR2_PACKAGE_TIMIDITY_INSTRUMENTS=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_BADBLOCKS is not set
@@ -83,15 +84,14 @@ BR2_PACKAGE_TAGLIB=y
 BR2_PACKAGE_TAGLIB_MP4=y
 BR2_PACKAGE_TAGLIB_ASF=y
 BR2_PACKAGE_TREMOR=y
-BR2_PACKAGE_LZO=y
 BR2_PACKAGE_LIBGCRYPT=y
 BR2_PACKAGE_LIBCONFUSE=y
+BR2_PACKAGE_LIBOPK=y
 BR2_PACKAGE_LIBSYSFS=y
 BR2_PACKAGE_LIBUNGIF=y
 BR2_PACKAGE_LIBAIO=y
 BR2_PACKAGE_LIBTHEORA=y
 BR2_PACKAGE_NEWT=y
-BR2_PACKAGE_POPT=y
 BR2_PACKAGE_GMENU2X=y
 BR2_PACKAGE_PYCLOCK=y
 BR2_PACKAGE_AVAHI=y
@@ -128,6 +128,7 @@ BR2_PACKAGE_DIALOG=y
 BR2_PACKAGE_FILE=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_BWM_NG=y
+BR2_PACKAGE_DINGUX_COMMANDER=y
 BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_UTIL_LINUX_PARTX=y
 BR2_PACKAGE_NANO=y
