--- a/package/Config.in
+++ b/package/Config.in
@@ -472,6 +472,7 @@ source "package/orc/Config.in"
 source "package/poco/Config.in"
 source "package/protobuf/Config.in"
 source "package/startup-notification/Config.in"
+source "package/libxdgmime/Config.in"
 endmenu
 
 menu "Text and terminal handling"
