--- a/package/Config.in
+++ b/package/Config.in
@@ -508,6 +508,7 @@ source "package/libnspr/Config.in"
 source "package/libsigc/Config.in"
 source "package/libtpl/Config.in"
 source "package/liburcu/Config.in"
+source "package/libxdgmime/Config.in"
 source "package/linux-pam/Config.in"
 source "package/lttng-libust/Config.in"
 source "package/mtdev2tuio/Config.in"
