opendingux: GCW0: Update defconfig
Enable libxdgmime.

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -91,6 +91,7 @@ BR2_PACKAGE_LIBSYSFS=y
 BR2_PACKAGE_LIBUNGIF=y
 BR2_PACKAGE_LIBAIO=y
 BR2_PACKAGE_LIBTHEORA=y
+BR2_PACKAGE_LIBXDGMIME=y
 BR2_PACKAGE_NEWT=y
 BR2_PACKAGE_GMENU2X=y
 BR2_PACKAGE_PYCLOCK=y
