--- a/board/opendingux/gcw0/uclibc.config
+++ b/board/opendingux/gcw0/uclibc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Version: 0.9.33.2
-# Fri Oct  5 03:28:42 2012
+# Wed Nov 14 22:56:09 2012
 #
 # TARGET_alpha is not set
 # TARGET_arm is not set
@@ -212,7 +212,7 @@ UCLIBC_HAS_REGEX_OLD=y
 UCLIBC_HAS_FNMATCH=y
 UCLIBC_HAS_FNMATCH_OLD=y
 # UCLIBC_HAS_WORDEXP is not set
-# UCLIBC_HAS_NFTW is not set
+UCLIBC_HAS_NFTW=y
 # UCLIBC_HAS_FTW is not set
 # UCLIBC_HAS_FTS is not set
 UCLIBC_HAS_GLOB=y
@@ -240,7 +240,7 @@ UCLIBC_BUILD_NOEXECSTACK=y
 #
 # Development/debugging options
 #
-CROSS_COMPILER_PREFIX="/home/mth/gcw0/buildroot/output/host/usr/bin/mipsel-unknown-linux-uclibc-"
+CROSS_COMPILER_PREFIX="/home/mth/gcw0/buildroot/output/host/usr/bin/mipsel-gcw0-linux-uclibc-"
 UCLIBC_EXTRA_CFLAGS=""
 # DODEBUG is not set
 DOSTRIP=y
