opendingux: GCW0: Update defconfig
Enable oprofile.

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -31,6 +31,7 @@ BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_DSTAT=y
 BR2_PACKAGE_DMALLOC=y
 BR2_PACKAGE_MEMSTAT=y
+BR2_PACKAGE_OPROFILE=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_STRESS=y
 BR2_PACKAGE_SSTRIP=y
