gmenu2x: Add a config entry to select the platform
And update GCW0's defconfig accordingly.

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -94,6 +94,7 @@ BR2_PACKAGE_LIBTHEORA=y
 BR2_PACKAGE_LIBXDGMIME=y
 BR2_PACKAGE_NEWT=y
 BR2_PACKAGE_GMENU2X=y
+BR2_PACKAGE_GMENU2X_PLATFORM="gcw0"
 BR2_PACKAGE_PYCLOCK=y
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
