--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -20,6 +20,7 @@ BR2_ROOTFS_STATIC_DEVICE_TABLE="board/opendingux/mini_device_table.txt"
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/opendingux/gcw0/target_skeleton"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/opendingux/busybox-1.20.x.config"
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
@@ -110,6 +111,7 @@ BR2_PACKAGE_KISMET_CLIENT=y
 BR2_PACKAGE_KISMET_DRONE=y
 BR2_PACKAGE_LINKS=y
 BR2_PACKAGE_LINKS_GRAPHICS=y
+BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_NTP_NTPDC=y
