--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -62,6 +62,7 @@ BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_REALTEK_RTL8192CU=y
 BR2_PACKAGE_PWSWD=y
+BR2_PACKAGE_PWSWD_MIXER="PCM"
 BR2_PACKAGE_PYTHON_CURSES=y
 BR2_PACKAGE_PYTHON_PYEXPAT=y
 BR2_PACKAGE_PYTHON_READLINE=y
