opendingux: gcw0: Enable UCLIBC_SUPPORT_AI_ADDRCONFIG
Without this option enabled, getifaddrs() is unavailable.

--- a/board/opendingux/gcw0/uclibc.config
+++ b/board/opendingux/gcw0/uclibc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Version: 0.9.33.2
-# Wed Nov 14 22:56:09 2012
+# Sat Dec  8 22:15:31 2012
 #
 # TARGET_alpha is not set
 # TARGET_arm is not set
@@ -153,7 +153,7 @@ UCLIBC_HAS_IPV4=y
 # UCLIBC_HAS_IPV6 is not set
 # UCLIBC_HAS_RPC is not set
 UCLIBC_USE_NETLINK=y
-# UCLIBC_SUPPORT_AI_ADDRCONFIG is not set
+UCLIBC_SUPPORT_AI_ADDRCONFIG=y
 # UCLIBC_HAS_BSD_RES_CLOSE is not set
 UCLIBC_HAS_COMPAT_RES_STATE=y
 # UCLIBC_HAS_EXTRA_COMPAT_RES_STATE is not set
