opendingux: GCW0: defconfig: Add tslib and ALSA MIDI support
The Zero doesn't have a touch screen, but having tslib will simplify
porting software, the porters tell me.

MIDI support in ALSA will be used to support soft synths running as
daemons.

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -22,8 +22,14 @@ BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/opendingux/gcw0/target_skeleton"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/opendingux/busybox-1.20.x.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_ALSA_UTILS=y
+BR2_PACKAGE_ALSA_UTILS_AMIDI=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_ALSA_UTILS_ACONNECT=y
+BR2_PACKAGE_ALSA_UTILS_APLAYMIDI=y
+BR2_PACKAGE_ALSA_UTILS_ARECORDMIDI=y
+BR2_PACKAGE_ALSA_UTILS_ASEQDUMP=y
+BR2_PACKAGE_ALSA_UTILS_ASEQNET=y
 BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_ALSA_VOLUME=y
 BR2_PACKAGE_FLAC=y
@@ -75,8 +81,6 @@ BR2_PACKAGE_PYTHON_PYGAME_FONT=y
 BR2_PACKAGE_PYTHON_PYGAME_MIXER=y
 BR2_PACKAGE_PYTHON_PYGAME_MIXER_MUSIC=y
 BR2_PACKAGE_ALSA_LIB_DEVDIR="/dev"
-# BR2_PACKAGE_ALSA_LIB_RAWMIDI is not set
-# BR2_PACKAGE_ALSA_LIB_SEQ is not set
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 # BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS is not set
 BR2_PACKAGE_LIBAO=y
@@ -92,6 +96,7 @@ BR2_PACKAGE_LIBOPK=y
 BR2_PACKAGE_LIBSYSFS=y
 BR2_PACKAGE_LIBUNGIF=y
 BR2_PACKAGE_LIBAIO=y
+BR2_PACKAGE_TSLIB=y
 BR2_PACKAGE_LIBTHEORA=y
 BR2_PACKAGE_LIBXDGMIME=y
 BR2_PACKAGE_NEWT=y
