opendingux: GCW0: defconfig: Enabled XPM support in SDL_image
I was told SuperTux needs it.

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -46,6 +46,7 @@ BR2_PACKAGE_FBGRAB=y
 BR2_PACKAGE_LIBMIKMOD=y
 BR2_PACKAGE_SDL_IMAGE_GIF=y
 BR2_PACKAGE_SDL_IMAGE_TARGA=y
+BR2_PACKAGE_SDL_IMAGE_XPM=y
 BR2_PACKAGE_SDL_SOUND=y
 BR2_PACKAGE_SDL_NET=y
 BR2_PACKAGE_TIMIDITY_INSTRUMENTS=y
