--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -34,6 +34,7 @@ BR2_PACKAGE_ALSA_UTILS_SPEAKER_TEST=y
 BR2_PACKAGE_ALSA_VOLUME=y
 BR2_PACKAGE_FLAC=y
 BR2_PACKAGE_MADPLAY=y
+BR2_PACKAGE_MODPLUGTOOLS=y
 BR2_PACKAGE_MPG123=y
 BR2_PACKAGE_DSTAT=y
 BR2_PACKAGE_DMALLOC=y
@@ -85,6 +86,7 @@ BR2_PACKAGE_ALSA_LIB_DEVDIR="/dev"
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 # BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS is not set
 BR2_PACKAGE_LIBAO=y
+BR2_PACKAGE_LIBMODPLUG=y
 BR2_PACKAGE_LIBSNDFILE=y
 BR2_PACKAGE_SPEEX=y
 BR2_PACKAGE_TAGLIB=y
