fluidsynth: Added package
FluidSynth is a real-time software synthesizer based on the SoundFont 2
specifications.

http://fluidsynth.sourceforge.net/

--- a/package/Config.in
+++ b/package/Config.in
@@ -320,6 +320,7 @@ menu "Libraries"
 menu "Audio/Sound"
 source "package/alsa-lib/Config.in"
 source "package/audiofile/Config.in"
+source "package/fluidsynth/Config.in"
 source "package/libao/Config.in"
 source "package/libcdaudio/Config.in"
 source "package/libcue/Config.in"
