--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -85,6 +85,7 @@ BR2_PACKAGE_PYTHON_PYGAME_MIXER_MUSIC=y
 BR2_PACKAGE_ALSA_LIB_DEVDIR="/dev"
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 # BR2_PACKAGE_ALSA_LIB_OLD_SYMBOLS is not set
+BR2_PACKAGE_FLUIDSYNTH=y
 BR2_PACKAGE_LIBAO=y
 BR2_PACKAGE_LIBMODPLUG=y
 BR2_PACKAGE_LIBSNDFILE=y
