opendingux: GCW0: defconfig: Enabled kmod tools
This is useful for testing drivers. Also it will be needed once we get
USB OTG running, so we can load drivers for USB devices when they are
plugged.

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -143,6 +143,8 @@ BR2_PACKAGE_LOCKFILE_PROGS=y
 BR2_PACKAGE_BWM_NG=y
 BR2_PACKAGE_DINGUX_COMMANDER=y
 BR2_PACKAGE_HTOP=y
+BR2_PACKAGE_KMOD=y
+BR2_PACKAGE_KMOD_TOOLS=y
 BR2_PACKAGE_UTIL_LINUX_PARTX=y
 BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
