--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -102,6 +102,24 @@ BR2_PACKAGE_LIBUNGIF=y
 BR2_PACKAGE_LIBAIO=y
 BR2_PACKAGE_TSLIB=y
 BR2_PACKAGE_LIBTHEORA=y
+BR2_PACKAGE_BOOST=y
+BR2_PACKAGE_BOOST_MULTITHREADED=y
+BR2_PACKAGE_BOOST_CHRONO=y
+BR2_PACKAGE_BOOST_DATE_TIME=y
+BR2_PACKAGE_BOOST_EXCEPTION=y
+BR2_PACKAGE_BOOST_FILESYSTEM=y
+BR2_PACKAGE_BOOST_GRAPH=y
+BR2_PACKAGE_BOOST_IOSTREAMS=y
+BR2_PACKAGE_BOOST_LOCALE=y
+BR2_PACKAGE_BOOST_MATH=y
+BR2_PACKAGE_BOOST_PROGRAM_OPTIONS=y
+BR2_PACKAGE_BOOST_RANDOM=y
+BR2_PACKAGE_BOOST_REGEX=y
+BR2_PACKAGE_BOOST_SERIALIZATION=y
+BR2_PACKAGE_BOOST_SIGNALS=y
+BR2_PACKAGE_BOOST_SYSTEM=y
+BR2_PACKAGE_BOOST_THREAD=y
+BR2_PACKAGE_BOOST_TIMER=y
 BR2_PACKAGE_LIBXDGMIME=y
 BR2_PACKAGE_NEWT=y
 BR2_PACKAGE_GMENU2X=y
