Add bennugd package

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -166,4 +166,5 @@ BR2_PACKAGE_KMOD_TOOLS=y
 BR2_PACKAGE_UTIL_LINUX_PARTX=y
 BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
+BR2_PACKAGE_BENNUGD=y
 # BR2_TARGET_ROOTFS_TAR is not set
