--- a/package/Config.in
+++ b/package/Config.in
@@ -133,6 +133,7 @@ source "package/sdl_net/Config.in"
 source "package/sdl_ttf/Config.in"
 source "package/sdl_gfx/Config.in"
 source "package/timidity-instruments/Config.in"
+source "package/bennugd/Config.in"
 
 comment "other GUIs"
 source "package/efl/Config.in"
