--- a/package/bennugd/Config.in
+++ b/package/bennugd/Config.in
@@ -6,6 +6,9 @@ config BR2_PACKAGE_BENNUGD
         select BR2_PACKAGE_SDL_MIXER
         select BR2_PACKAGE_OPENSSL
 	help
-	  Bennu Game Development - Bennu is a high level open source game development suite which focuses on modularity and portability, making it a perfect choice for cross-platform game development.
+	  - Bennu Game Development -
+          Bennu is a high level open source game development suite
+          which focuses on modularity and portability,
+          making it a perfect choice for cross-platform game development.
 
 	  http://www.bennugd.org
