opendingux: GCW0: defconfig: Add platform info for pwswd

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -70,6 +70,7 @@ BR2_PACKAGE_I2C_TOOLS=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_8192=y
 BR2_PACKAGE_PWSWD=y
+BR2_PACKAGE_PWSWD_PLATFORM="gcw0"
 BR2_PACKAGE_PWSWD_MIXER="PCM"
 BR2_PACKAGE_PYTHON_CURSES=y
 BR2_PACKAGE_PYTHON_PYEXPAT=y
