pwswd: Update package to match upstream changes
Upstream pwswd now expects a CONFIG environment variable to be
passed.

--- a/package/pwswd/Config.in
+++ b/package/pwswd/Config.in
@@ -9,6 +9,9 @@ config BR2_PACKAGE_PWSWD
 
 if BR2_PACKAGE_PWSWD
 
+config BR2_PACKAGE_PWSWD_PLATFORM
+	string "Target platform"
+
 config BR2_PACKAGE_PWSWD_MIXER
 	string "Volume mixer"
 
