--- a/package/pwswd/Config.in
+++ b/package/pwswd/Config.in
@@ -1,5 +1,6 @@
 config BR2_PACKAGE_PWSWD
 	bool "pwswd"
+	select BR2_PACKAGE_LIBINI
 	help
 	  Power Switch Daemon for Dingoo A320/A330 and GCW Zero.
 	  It allows the user to change various system settings such as brightness,
