--- a/package/Config.in
+++ b/package/Config.in
@@ -698,6 +698,7 @@ endmenu
 
 menu "Shell and utilities"
 source "package/at/Config.in"
+source "package/bar/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 source "package/bash/Config.in"
 source "package/dash/Config.in"
