opendingux: GCW0: Mount SD cards with UTF8 support enabled

--- a/board/opendingux/gcw0/target_skeleton/etc/mdev.conf
+++ b/board/opendingux/gcw0/target_skeleton/etc/mdev.conf
@@ -1,2 +1,2 @@
-mmc.*	0:6	0660	*/usr/sbin/mnt $MDEV noatime,nodiratime
-sd.*	0:6	0660	*/usr/sbin/mnt $MDEV noatime,nodiratime
+mmc.*	0:6	0660	*/usr/sbin/mnt $MDEV noatime,nodiratime,utf8=1
+sd.*	0:6	0660	*/usr/sbin/mnt $MDEV noatime,nodiratime,utf8=1
