--- a/package/sdl_mixer/Config.in
+++ b/package/sdl_mixer/Config.in
@@ -9,3 +9,12 @@ config BR2_PACKAGE_SDL_MIXER
 	  SMPEG MP3 libraries.
 
 	  http://www.libsdl.org/projects/SDL_mixer/
+
+if BR2_PACKAGE_SDL_MIXER
+
+config BR2_PACKAGE_SDL_MIXER_LIBMAD
+	bool "link to libmad (licensed as GPL)"
+	depends on BR2_PACKAGE_LIBMAD
+	default y
+
+endif
