opendingux: GCW0: Update defconfig so SDL_mixer does to link to libmad

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -48,9 +48,11 @@ BR2_PACKAGE_LIBMIKMOD=y
 BR2_PACKAGE_SDL_IMAGE_GIF=y
 BR2_PACKAGE_SDL_IMAGE_TARGA=y
 BR2_PACKAGE_SDL_IMAGE_XPM=y
+# BR2_PACKAGE_SDL_MIXER_LIBMAD is not set
 BR2_PACKAGE_SDL_SOUND=y
 BR2_PACKAGE_SDL_NET=y
 BR2_PACKAGE_TIMIDITY_INSTRUMENTS=y
+BR2_PACKAGE_BENNUGD=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_BADBLOCKS is not set
 # BR2_PACKAGE_E2FSPROGS_CHATTR is not set
@@ -166,5 +168,4 @@ BR2_PACKAGE_KMOD_TOOLS=y
 BR2_PACKAGE_UTIL_LINUX_PARTX=y
 BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
-BR2_PACKAGE_BENNUGD=y
 # BR2_TARGET_ROOTFS_TAR is not set
