opendingux: GCW0: defconfig: Enabled Bar

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -157,6 +157,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
 BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
+BR2_PACKAGE_BAR=y
 BR2_PACKAGE_DIALOG=y
 BR2_PACKAGE_FILE=y
 BR2_PACKAGE_LOCKFILE_PROGS=y
