--- a/package/Config.in
+++ b/package/Config.in
@@ -394,6 +394,7 @@ source "package/gtk2-themes/Config.in"
 source "package/imlib2/Config.in"
 source "package/jpeg/Config.in"
 source "package/libart/Config.in"
+source "package/libcmenu/Config.in"
 source "package/libdmtx/Config.in"
 source "package/libdrm/Config.in"
 source "package/libexif/Config.in"
