opendingux: busybox: Enable UTF-8 in config

--- a/board/opendingux/busybox-1.20.x.config
+++ b/board/opendingux/busybox-1.20.x.config
@@ -26,10 +26,10 @@ CONFIG_FEATURE_COMPRESS_USAGE=y
 # CONFIG_FEATURE_INSTALLER is not set
 # CONFIG_INSTALL_NO_USR is not set
 # CONFIG_LOCALE_SUPPORT is not set
-# CONFIG_UNICODE_SUPPORT is not set
+CONFIG_UNICODE_SUPPORT=y
 # CONFIG_UNICODE_USING_LOCALE is not set
 # CONFIG_FEATURE_CHECK_UNICODE_IN_ENV is not set
-CONFIG_SUBST_WCHAR=0
+CONFIG_SUBST_WCHAR=63
 CONFIG_LAST_SUPPORTED_WCHAR=0
 # CONFIG_UNICODE_COMBINING_WCHARS is not set
 # CONFIG_UNICODE_WIDE_WCHARS is not set
