--- a/package/gmenu2x/Config.in
+++ b/package/gmenu2x/Config.in
@@ -3,6 +3,8 @@ config BR2_PACKAGE_GMENU2X
 	select BR2_PACKAGE_LIBPNG
 	select BR2_PACKAGE_SDL
 	select BR2_PACKAGE_SDL_GFX
+	select BR2_PACKAGE_SDL_TTF
+	select BR2_PACKAGE_DEJAVU_FONTS
 	help
 	  Application menu for devices with a 320x240 screen and buttons.
 
