opendingux: GCW0: defconfig: Enable unlockvt

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -44,6 +44,7 @@ BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_STRESS=y
 BR2_PACKAGE_SSTRIP=y
 BR2_PACKAGE_FBGRAB=y
+BR2_PACKAGE_UNLOCKVT=y
 BR2_PACKAGE_LIBMIKMOD=y
 BR2_PACKAGE_SDL_IMAGE_GIF=y
 BR2_PACKAGE_SDL_IMAGE_TARGA=y
