opendingux: GCW0: defconfig: Several updates
Switched to GCC 4.8.x.
Added unrar, rsync and wget.
Removed kismet.

--- a/configs/gcw0_defconfig
+++ b/configs/gcw0_defconfig
@@ -5,7 +5,7 @@ BR2_VENDOR="gcw0"
 BR2_UCLIBC_CONFIG="board/opendingux/gcw0/uclibc.config"
 BR2_BINUTILS_VERSION_2_22=y
 BR2_BINUTILS_EXTRA_CONFIG_OPTIONS="--enable-lto"
-BR2_GCC_VERSION_4_7_X=y
+BR2_GCC_VERSION_4_8_X=y
 BR2_EXTRA_GCC_CONFIG_OPTIONS="--enable-lto"
 BR2_PACKAGE_GDB=y
 BR2_PACKAGE_GDB_SERVER=y
@@ -36,6 +36,8 @@ BR2_PACKAGE_FLAC=y
 BR2_PACKAGE_MADPLAY=y
 BR2_PACKAGE_MODPLUGTOOLS=y
 BR2_PACKAGE_MPG123=y
+BR2_PACKAGE_UNRAR=y
+# BR2_PACKAGE_UNRAR_SMP is not set
 BR2_PACKAGE_DSTAT=y
 BR2_PACKAGE_DMALLOC=y
 BR2_PACKAGE_MEMSTAT=y
@@ -137,9 +139,6 @@ BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_HOSTAPD_WPS=y
 BR2_PACKAGE_IW=y
-BR2_PACKAGE_KISMET=y
-BR2_PACKAGE_KISMET_CLIENT=y
-BR2_PACKAGE_KISMET_DRONE=y
 BR2_PACKAGE_LINKS=y
 BR2_PACKAGE_NETCAT=y
 BR2_PACKAGE_NTP=y
@@ -149,8 +148,10 @@ BR2_PACKAGE_NTP_NTPQ=y
 BR2_PACKAGE_NTP_TICKADJ=y
 BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_OPENSSH_START_DAEMON is not set
+BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_USHARE=y
+BR2_PACKAGE_WGET=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
 BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
