--- a/package/mesa3d-etna_viv/Config.in
+++ b/package/mesa3d-etna_viv/Config.in
@@ -3,6 +3,8 @@ config BR2_PACKAGE_MESA3D_ETNA_VIV
 	select BR2_PACKAGE_EXPAT
 	select BR2_PACKAGE_LIBDRM
 	select BR2_PACKAGE_HOST_LIBXML2_PYTHON
+	select BR2_PACKAGE_XLIB_LIBXXF86VM
 	depends on BR2_PACKAGE_ETNA_VIV
+	depends on BR2_PACKAGE_XORG7
 	help
 	  Mesa 3D, an open-source implementation of the OpenGL specification.
